--- a/assets/css/common/main.css
+++ b/assets/css/common/main.css
@@ -1,269 +1,225 @@
-/* for home and other pages */
-.main {
-    position: relative;
-    min-height: calc(100vh - var(--header-height) - var(--footer-height));
-    max-width: calc(var(--main-width) + var(--gap) * 2);
-    margin: auto;
-    padding: var(--content-gap) var(--gap) 0;
-}
-
-@media screen and (max-width: 500px) {
-    .main {
-        padding-top: 0;
-    }
-}
-
-/* same as .post-header */
-.page-header {
-    margin: var(--content-gap) 0 calc(var(--content-gap) * 1.5);
-}
-
-.mark-line {
-    display: inline-block;
-    background: var(--line-yellow) bottom left/100% 0.3em no-repeat;
-}
-mark {
-    margin: 0 -0.4em;
-    padding: 0em 0.4em;
-    border-radius: 0.8em 0.3em;
-    background: transparent;
-    background-image: linear-gradient(
-      to right,
-      rgba(255, 225, 0, 0.1),
-      rgba(255, 225, 0, 0.7) 4%,
-      rgba(255, 225, 0, 0.3)
-    );
-    -webkit-box-decoration-break: clone;
-    box-decoration-break: clone;
-}
-
-/* for home and section page */
-.first-entry {
-    position: relative;
-    min-height: 320px;
-    margin: var(--gap) 0 calc(var(--gap) * 2) 0;
-}
-
-.first-entry .entry-header {
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    margin: var(--gap) 0 calc(var(--gap) * 2);
-}
-
-.first-entry .entry-header h1 {
-    font-size: 34px;
-    line-height: 1.3;
-}
-
-.first-entry .entry-content {
-    margin: 14px 0;
-    font-size: 17px;
-    color: var(--primary);
-    line-height: 1.6em;
-    display: block;
-    overflow: initial;  /* fix <mark> edge get cut */
-}
-
-@media screen and (max-width: 500px) {
-    .first-entry .entry-header h1 {
-        font-size: 30px;
-    }
-    .first-entry .entry-content {
-        font-size: 16px;
-    }
-}
-
-.first-entry .entry-content p {
-    margin-bottom: .8em;
-}
-.first-entry .entry-content ul,
-.first-entry .entry-content ol {
-    margin: .8em 0;
-}
-.first-entry .entry-content li p {
-    margin-bottom: .5em;
-}
-
-.first-entry .entry-footer {
-    font-size: 14px;
-}
-
-.inline-links a {
-    font-weight: 500;
-    color: var(--primary);
-    box-shadow: var(--link-underline-shadow);
-    transition: var(--link-transition);
-}
-.inline-links a:hover {
-    color: var(--link-hover-color);
-    box-shadow: var(--link-hover-underline-shadow);
-}
-
-.inline-links span:not(:last-of-type):after {
-    content: "·";
-    margin-inline-start: .5em;
-    margin-inline-end: .5em;
-}
-
-
-/* for post page */
-.main.post {
-    max-width: calc(var(--post-width) + var(--gap) * 2);
-}
-
-.page-header h1 {
-    font-size: 40px;
-    margin-bottom: var(--content-gap);
-    text-transform: capitalize;
-}
-
-.pagination {
-    display: flex;
-}
-
-.pagination a {
-    color: var(--theme);
-    font-size: 13px;
-    line-height: 36px;
-    background: var(--primary);
-    border-radius: calc(36px / 2);
-    padding: 0 16px;
-}
-
-.pagination .next {
-    margin-inline-start: auto;
-}
-
-.social-icons {
-    padding: 12px 0;
-}
-
-.social-icons a {
-    display: inline-block;
-    line-height: 20px;
-    transition: var(--link-transition);
-}
-
-.social-icons a:not(:last-of-type) {
-    margin-right: 12px;
-}
-
-.social-icons a svg {
-    height: 26px;
-    width: 26px;
-}
-.social-icons a:hover {
-    color: var(--link-hover-color);
-    box-shadow: var(--link-hover-underline-shadow);
-}
-
-code {
-    direction: ltr;
-}
-
-div.highlight,
-pre {
-    position: relative;
-}
-
-.copy-code {
-    display: none;
-    position: absolute;
-    top: 4px;
-    right: 4px;
-    color: rgba(255, 255, 255, 0.8);
-    background: rgba(78, 78, 78, 0.8);
-    border-radius: var(--radius);
-    padding: 0 5px;
-    font-size: 14px;
-    user-select: none;
-}
-
-div.highlight:hover .copy-code,
-pre:hover .copy-code {
-    display: block;
-}
-
-.meta-item {
-    display: inline-block;
-}
-.meta-item * {
-    color: var(--secondary);
-}
-
-.meta-item:not(:last-of-type):after {
-    content: "·";
-    margin-inline-start: .5em;
-    margin-inline-end: .5em;
-}
-
-.meta-item svg {
-    width: 1em;
-    height: 1em;
-    display: inline-block;
-    vertical-align: -0.15em;
-}
-
-.meta-item a {
-    transition: var(--link-transition);
-}
-.meta-item a:hover {
-    color: var(--primary);
-    box-shadow: 0 1px 0 var(--secondary);
-}
-.meta-item .post-tags a:not(:last-of-type) {
-    margin-inline-end: .3em;
-}
-.meta-item .post-tags a:not(:last-of-type):after {
-    content: ",";
-}
-.meta-item .post-tags a:before {
-    content: "#";
-}
-
-
-/* images */
-
-figure > img {
-    image-rendering: -webkit-optimize-contrast;
-}
-
-.post-content img {
-    image-rendering: -webkit-optimize-contrast;
-}
-
-
-/* effects */
 :root {
-    --shadow-color: 0deg 0% 0%;
-    --shadow-elevation-low:
-      0.6px 0.6px 1px hsl(var(--shadow-color) / 0.1),
-      0.9px 0.9px 1.4px -1.2px hsl(var(--shadow-color) / 0.1),
-      2.2px 2.2px 3.5px -2.5px hsl(var(--shadow-color) / 0.1);
-    --shadow-elevation-medium:
-      0.6px 0.6px 1px hsl(var(--shadow-color) / 0.11),
-      1.8px 1.8px 2.9px -0.8px hsl(var(--shadow-color) / 0.11),
-      4.6px 4.6px 7.3px -1.7px hsl(var(--shadow-color) / 0.11),
-      11.1px 11.1px 17.7px -2.5px hsl(var(--shadow-color) / 0.11);
-
-    --twitter-color: #4a99e9;
+  --c-bg: #fff;
+  --c-scrollbar: #eee;
+  --c-scrollbar-hover: #bbb;
 }
 
-
-/* shortcodes */
-
-.standout {
-    font-size: 24px;
-    padding: .5em;
-    text-align: center;
+html {
+  background-color: var(--c-bg);
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
-.image-size-control {
-    margin-left: auto;
-    margin-right: auto;
+html.dark {
+  --c-bg: #050505;
+  --c-scrollbar: #111;
+  --c-scrollbar-hover: #222;
 }
-.image-size-control > img {
-    width: inherit;
-    height: inherit;
+
+::selection {
+  background: #8884;
+}
+
+#nprogress {
+  pointer-events: none;
+}
+
+#nprogress .bar {
+  background: #888;
+  opacity: 0.75;
+  position: fixed;
+  z-index: 1031;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+}
+
+* {
+  scrollbar-color: var(--c-scrollbar) var(--c-bg);
+}
+
+.sponsorkit-avatar {
+  cursor: pointer;
+}
+.sponsorkit-tier-title {
+  font-weight: 600;
+  font-size: 20px;
+  fill: currentColor;
+}
+.sponsorkit-name {
+  font-weight: 300;
+  font-size: 15px;
+  transform: translateY(8px);
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar:horizontal {
+  height: 6px;
+}
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-corner {
+  background: var(--c-bg);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: var(--c-scrollbar);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: var(--c-scrollbar-hover);
+}
+
+h2 + p > em:first-child {
+  opacity: 0.5;
+  display: block;
+  margin-top: -20px;
+  font-size: 0.9em;
+}
+
+.dark [img-light] {
+  display: none;
+}
+
+html:not(.dark) [img-dark] {
+  display: none;
+}
+
+@keyframes slide-enter {
+  0% {
+    transform: translateY(10px);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  html:not(.no-sliding) [slide-enter],
+  html:not(.no-sliding) .slide-enter,
+  html:not(.no-sliding) .slide-enter-content > *:not(:has(.table-of-contents)) {
+    --enter-stage: 0;
+    --enter-step: 90ms;
+    --enter-initial: 0ms;
+    animation: slide-enter 1s both 1;
+    animation-delay: calc(var(--enter-initial) + var(--enter-stage) * var(--enter-step));
+  }
+
+  .slide-enter-content > *:nth-child(1) {
+    --enter-stage: 1 !important;
+  }
+  .slide-enter-content > *:nth-child(2) {
+    --enter-stage: 2 !important;
+  }
+  .slide-enter-content > *:nth-child(3) {
+    --enter-stage: 3 !important;
+  }
+  .slide-enter-content > *:nth-child(4) {
+    --enter-stage: 4 !important;
+  }
+  .slide-enter-content > *:nth-child(5) {
+    --enter-stage: 5 !important;
+  }
+  .slide-enter-content > *:nth-child(6) {
+    --enter-stage: 6 !important;
+  }
+  .slide-enter-content > *:nth-child(7) {
+    --enter-stage: 7 !important;
+  }
+  .slide-enter-content > *:nth-child(8) {
+    --enter-stage: 8 !important;
+  }
+  .slide-enter-content > *:nth-child(9) {
+    --enter-stage: 9 !important;
+  }
+  .slide-enter-content > *:nth-child(10) {
+    --enter-stage: 10 !important;
+  }
+  .slide-enter-content > *:nth-child(11) {
+    --enter-stage: 11 !important;
+  }
+  .slide-enter-content > *:nth-child(12) {
+    --enter-stage: 12 !important;
+  }
+  .slide-enter-content > *:nth-child(13) {
+    --enter-stage: 13 !important;
+  }
+  .slide-enter-content > *:nth-child(14) {
+    --enter-stage: 14 !important;
+  }
+  .slide-enter-content > *:nth-child(15) {
+    --enter-stage: 15 !important;
+  }
+  .slide-enter-content > *:nth-child(16) {
+    --enter-stage: 16 !important;
+  }
+  .slide-enter-content > *:nth-child(17) {
+    --enter-stage: 17 !important;
+  }
+  .slide-enter-content > *:nth-child(18) {
+    --enter-stage: 18 !important;
+  }
+  .slide-enter-content > *:nth-child(19) {
+    --enter-stage: 19 !important;
+  }
+  .slide-enter-content > *:nth-child(20) {
+    --enter-stage: 20 !important;
+  }
+}
+
+::view-transition-old(root),
+::view-transition-new(root) {
+  animation: none;
+  mix-blend-mode: normal;
+}
+::view-transition-old(root) {
+  z-index: 1;
+}
+::view-transition-new(root) {
+  z-index: 9999;
+}
+.dark::view-transition-old(root) {
+  z-index: 9999;
+}
+.dark::view-transition-new(root) {
+  z-index: 1;
+}
+
+/* Overrides Floating Vue */
+.v-popper--theme-dropdown .v-popper__inner,
+.v-popper--theme-tooltip .v-popper__inner {
+  --at-apply: bg-base color-base text-base rounded border border-base shadow;
+  box-shadow: 0 6px 30px #0000001a;
+}
+
+.v-popper--theme-tooltip .v-popper__arrow-inner,
+.v-popper--theme-dropdown .v-popper__arrow-inner {
+  visibility: visible;
+  --at-apply: border-white dark-border-black;
+}
+
+.v-popper--theme-tooltip .v-popper__arrow-outer,
+.v-popper--theme-dropdown .v-popper__arrow-outer {
+  --at-apply: border-base;
+}
+
+.v-popper--theme-tooltip.v-popper--shown,
+.v-popper--theme-tooltip.v-popper--shown * {
+  transition: none !important;
+}
+
+/* Transitions */
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.2s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
 }
