--- a/assets/css/common/main.css
+++ b/assets/css/common/main.css
@@ -159,6 +159,10 @@ figure > img {
     font-weight: 600;
     letter-spacing: -0.02em;
 }
+.social-icons {
+    font-size: 14px;   /* 锁死 em 环境 */
+    line-height: 1;
+}
 
 .dark .standout {
     color: #f0f0f0;
